java-sample-code-2 CGLIB (3)