@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'application'
 }
 
 group = 'org.github.on-sync'
@@ -18,4 +19,8 @@ dependencies {
 
 test {
     useJUnitPlatform()
+}
+
+application {
+    applicationDefaultJvmArgs = ['--add-opens=java.base/java.lang=ALL-UNNAMED', '--add-opens=java.base/java.lang.reflection=ALL-UNNAMED']
 }
